--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,12 @@
 			<artifactId>spring-boot-autoconfigure</artifactId>
 			<version>3.0.12</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.16</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
