--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,12 @@
             <artifactId>httpcore</artifactId>
             <version>4.4.16</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>com.networknt</groupId>
+			<artifactId>json-schema-validator</artifactId>
+			<version>1.0.82</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
